# fraud-detector-AI-agent

./: README.md  pyproject.toml
.github/workflows/: cicd.yml
src/: Dockerfile  app.py  conf.py  fraud_agent.py  schema.py  tools.py
tests/: test_api.py
